Fixed minor typographical errors

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
@@ -13,7 +13,7 @@ Specifying a repository location</h3>
 <p CLASS="Head">Before we can share our project with other users we must first
 specify an available repository.</p>
 <ol>
-  <li>Open the CVS Repository Browsing perspective. 
+  <li>Open the CVS Repository Exploring perspective. 
         The top left view shows all of the CVS repositories that we are currently 
         working with. As you can see, the view is empty, meaning we still need 
         to specify a repository. </li>
@@ -57,7 +57,7 @@ repository administrator in order to fill in the necessary information.
   <li>
 	  <P CLASS="Para"> Leave<i> Use Default Port</i> enabled.&nbsp;</P> 
       </li>
-  <li>By default the <i>Validate location on finish<b> 
+  <li>By default the <i>Validate Connection on Finish<b> option
         </b></i>is checked.&nbsp; </li>
   <li>
 <P CLASS="Para">
@@ -68,7 +68,7 @@ validate the information by connecting to the repository. In doing so it may pro
 Note that the repository connection is only used to validate the information.</P>
   </li>
   <li>
-<P CLASS="Para">Observe that the Repositories view now shows the new repository location.</P>
+<P CLASS="Para">Observe that the CVS Repositories view now shows the new repository location.</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image82_repo_view1.jpg" alt="CVS Repositories view" width="314" height="81"></P>
   </li>
