--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
@@ -18,7 +18,7 @@ ahead and commit the work we have done.
 <ol>
   <li>
 <P CLASS="Para">
-In the Structured Compare list select file1.txt</P>.
+In the Structure Compare list select file1.txt</P>.
 <blockquote>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image82_repo_release.jpg"  alt="Structure Compare" width="262" height="145"></P>
