--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
@@ -11,7 +11,7 @@
 <h3>
 Another user making changes</h3>
 <p CLASS="Para">Now that Fred has the project in his Workbench he needs to modify 
-  several of the files and synchronize with the the repository in order to commit 
+  several of the files and synchronize with the repository in order to commit 
   them.</p>
 <ul>
   <li>Fred will make changes to file1.txt and file2.txt</li>
@@ -21,12 +21,12 @@ Another user making changes</h3>
 <p CLASS="Para">Fred should proceed as follows:</p>
 <ol>
   <li>Modify file1.txt as follows
-<p>Original Contents:</p>
+<p>Original contents:</p>
 <blockquote>
   <p><i>This is the contents<br>
   of file 1.</i></p>
 </blockquote>
-<p>New Contents (changes shown in bold)</p>:
+<p>New contents (changes shown in bold):</p>
 <blockquote>
     <p><i>This is the contents<br>
     <b>Fred-update&nbsp; </b><br>
@@ -34,12 +34,12 @@ Another user making changes</h3>
 </blockquote>
   </li>
   <li>Modify file2.txt as follows
-<p>Original Contents:</p>
+<p>Original contents:</p>
 <blockquote>
   <p><i>File2 is a small file<br>
   with simple text.</i></p>
 </blockquote>
-<p>New Contents (changes shown in bold)</p>:
+<p>New contents (changes shown in bold):</p>
 <blockquote>
   <p><i>File2 is a (<b>Fred was here) </b>small file<br>
   with simple text.&nbsp;</i></p>
