--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
@@ -15,24 +15,24 @@ Making our own changes</h3>
   changes we have made along with changes that have been made by Fred.</p>
 <ol>
   <li>Start by modifying file2.txt as follows
-<p>Original Contents:</p>
+<p>Original contents:</p>
 <blockquote>
   <p><i>File2 is a <b>Jane-update </b>small file<br>
   with simple text.</i></p>
 </blockquote>
-<p>New Contents: (changes shown in bold)</p>
+<p>New contents: (changes shown in bold)</p>
 <blockquote>
     <p><i>This is the <b>Jane-update </b>contents<br>
     of file 2.&nbsp;</i></p>
 </blockquote>
   </li>
   <li>Modify file3.txt as follows
-<p>Original Contents:</p>
+<p>Original contents:</p>
 <blockquote>
   <p><i>This is the brief contents<br>
   of file 3</i></p>
 </blockquote>
-<p>New Contents:(changes shown in bold)</p>
+<p>New contents:(changes shown in bold)</p>
 <blockquote>
   <p><i>This is the brief contents<br>
   of file <b>(Jane was here) </b>3</i></p>
