--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
@@ -31,7 +31,7 @@
   </li>
 </ol>
 <P>We have successfully collaborated with Fred by making simultaneous changes 
-  to the same project. The Synchronization view&nbsp; and CVS Repository History 
+  to the same project. The Synchronize view&nbsp; and CVS Resource History 
   view allowed us to determine the specific changes each user was making and to 
   quickly stay on top of the ongoing changes being committed into the repository. 
 </P>
