--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-70_replace.htm
@@ -44,7 +44,7 @@ resource from the repository. To roll back to an earlier revision:</p>
 </ol>
 <P>We have seen how to synchronize with the repository, replace with revision 
   or replace with the latest from the repository. You can also compare with these 
-  revisions/versions in a similar manner by choosing the&nbsp; Compare With menu 
+  revisions/versions in a similar manner by choosing the Compare With menu 
   operation from a resource's context menu in the Navigator. </P>
 
 
