Updated Ant doc

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
@@ -13,7 +13,7 @@
 Ant support</H1>
 <P CLASS="Para">
 Ant is a build tool similar to the &quot;make&quot; feature, but written in Java.
-It is an Apache open source project.&nbsp;See <a href="http://jakarta.apache.org/ant/index.html" target="_blank">http://jakarta.apache.org/ant/index.html</a>
+It is an Apache open source project.&nbsp;See <a href="http://ant.apache.org" target="_blank">http://ant.apache.org</a>
 for more details.  </P>
 <P CLASS="Para">
 The Ant support allows you to create and run Ant build files from the Workbench.&nbsp;
@@ -21,23 +21,27 @@ These Ant build files can operate on resources in the file system as well as
 resources in the workspace. 
 </P>
 <P CLASS="Para">
-Output from an Ant build file is displayed in the log console view. Ant output 
-can optionally be displayed in a structured format. Targets and tasks are shown 
-in a tree hierarchy if the output structure tree is enabled in the log console.
+Output from an Ant build file is displayed in the console view in the same hierarchical
+format seen when running Ant from the command line. Ant tasks (for example "[mkdir]")
+are hyperlinked to the associated Ant build file, and javac error reports are hyperlinked
+to the associated Java source file and line number.
 </P>
 <P CLASS="Para">
 You can add classes to the Ant classpath and add Ant tasks and types from the ant
 runtime preference page, under <b>Window &gt; Preferences &gt; Ant &gt; Runtime</b>.
 </P>
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<br><a href="../concepts/concepts-22.htm">Builds</a>
-<br><a href="../concepts/cexttools.htm">External tools</a>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-22.htm">Builds</a><br>
+<a href="../concepts/cexttools.htm">External tools</a>
 </p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-ant-running.htm">Running Ant build files</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-<br><a href="../reference/ref-antprefs.htm">Ant</a>
+<a href="../tasks/tasks-ant-running.htm">Running Ant build files</a><br>
+<a href="../tasks/tasks-ant-classpath.htm">Modifying the Ant classpath</a><br>
+<a href="../tasks/tasks-ant-addtasksandtypes.htm">Adding new Ant tasks and types</a><br>
+<a href="../tasks/tasks-ant-version.htm">Using a different version of Ant</a></p>
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+<a href="../reference/ref-antprefs.htm">Ant</a>
 </p>
 <p>
 <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a>
