Renamed exttools concept doc

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-22.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-22.htm
@@ -48,7 +48,7 @@ equivalent shortcut key. Manual builds can be either full or incremental and can
 or the entire workspace.</li>
 </ul>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<br><a href="cexttools.htm">External tools</a>
+<br><a href="concepts-exttools.htm">External tools</a>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
 <br><a href="../tasks/tasks-73.htm">Building resources</a>
