--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-running.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-running.htm
@@ -37,7 +37,7 @@ go to the <b>Run &gt; External Tools</b> menu.
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-antsupport.htm">Ant support</a><br>
 <a href="../concepts/concepts-22.htm">Builds</a><br>
-<a href="../concepts/cexttools.htm">External tools</a>
+<a href="../concepts/concepts-exttools.htm">External tools</a>
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
