--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
@@ -33,7 +33,7 @@ runtime preference page, under <b>Window &gt; Preferences &gt; Ant &gt; Runtime<
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-22.htm">Builds</a><br>
-<a href="../concepts/cexttools.htm">External tools</a>
+<a href="../concepts/concepts-exttools.htm">External tools</a>
 </p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="../tasks/tasks-ant-running.htm">Running Ant build files</a><br>
