fix <strong> problem

--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_graphics.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_graphics.htm
@@ -139,8 +139,8 @@ Once you have allocated your graphics objects, you are ready to paint. <em> You 
 event, you should first try to use the <strong> redraw()</strong> method, which will generate another paint
 event in the OS. Drawing outside of the paint method defeats platform optimizations and can cause bugs depending upon the number of pending paints in the event queue.</P>
 <P >
-When you receive a paint event, you will be supplied with a <strong><a href="../reference/api/org/eclipse/swt/graphics/GC.html">GC</a>
-</strong>pre-configured for drawing in the widget. <em> Do not free this </em><a href="../reference/api/org/eclipse/swt/graphics/GC.html">GC</a></strong>!</strong> You did not create it. </P>
+When you receive a paint event, you will be supplied with a <strong><a href="../reference/api/org/eclipse/swt/graphics/GC.html">GC</a></strong>
+pre-configured for drawing in the widget. <em>Do not free this</em> <strong><a href="../reference/api/org/eclipse/swt/graphics/GC.html">GC</a></strong>! You did not create it. </P>
 <P >
 Any other graphics objects must be allocated while handling the event (or
 beforehand). Below is a snippet based on the
