Fix for CHKPII.

--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_running_script_programmatically.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_running_script_programmatically.htm
@@ -38,7 +38,7 @@ public static void main(String[] args) throws Exception {
 <p>If a progress monitor is used, it is made available for the running tasks.
 See <a href="./ant_contributing_task.htm#monitor">Progress Monitors</a> for more details.
 Note that only one Ant build can occur at any given time. See <a href="../reference/api/org/eclipse/ant/core/AntRunner.html#isBuildRunning()">
-AntRunner.isBuildRunning()</a></b>;
+AntRunner.isBuildRunning()</a>;
 </p>
 
 <h3>
