--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ContentAssist.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ContentAssist.htm
@@ -16,7 +16,7 @@
       In this section you will use content assist to help finish writing a new
       method. Open <em>junit.samples.VectorTest.java</em> file in the Java
       editor if you do not already have it open and select the <code>testSizeIsThree()</code> method
-      in the Outline view. If the file doesn't contain such a method see <a href="qs-AddMethod.htm">Adding new methods<a/>
+      in the Outline view. If the file doesn't contain such a method see <a href="qs-AddMethod.htm">Adding new methods</a>
       for how to add this method.
     </p>
     <ol>
