Corrected the steps to run Ant

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-running.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-running.htm
@@ -9,29 +9,29 @@
 <BODY BGCOLOR="#ffffff">
 <H1>Running Ant build files</H1>
 
-<p>To run an Ant script in the Workbench:
+<p>To run an Ant build file in the Workbench:
 </p>
 <ol>
   <li>In the Navigator view, select an XML file.</li>
-  <li>From the file's pop-up menu, select <b>Run Ant</b>. If the selected XML 
-    file is a valid Ant script, the Ant wizard opens.</li>
-  <li>Select one or more targets from the <b>Available targets</b> list. The order 
+  <li>From the file's pop-up menu, select <b>Run Ant...</b>. The launch configuration
+  	dialog opens.</li>
+  <li>Select one or more targets from the <b>Targets</b> tab. The order 
     in which you select the items is the order in which they will run. The order 
-    is indicated by the number in square brackets to the left of the target.</li>
-  <li>(Optional) Type any required arguments in the <b>Arguments</b> field.</li>
-  <li>If you want output from the script to display in a console in the Workbench, 
-    select <b>Show execution log in console</b>.</li>
-  <li>Click <b>Finish</b>.</li>
+    is displayed in the <b>Target execution order</b> box at the bottom of the tab.
+    You can change the order of the targets by clicking the <b>Order...</b> button.</li>
+  <li>(Optional) Configure options on the other tabs. For example, on the <b>Main</b> tab,
+    type any required arguments in the <b>Arguments</b> field.</li>
+  <li>Click <b>Run</b>.</li>
 </ol>
 
-<p>The Ant script will run on the selected targets. If you selected the 
-option, the Log Console displays any applicable execution results 
-after the script runs.
+<p>The Ant build file will run on the selected targets. Unless you disabled the <b>Capture
+output</b> option on the <b>Main</b> tab, the console displays any applicable execution results 
+as the build file runs.
 </p>
 
-<p>Once a script is run through the Ant wizard, it is automatically configured 
-as an external tool. In order to change the configuration or rerun the script, 
-go to the <b>Run &gt; External Tools</b> menu.
+<p>These steps create a persisted launch configuration. The newly created configuration will
+appear in the launch history under <b>Run &gt External Tools</b> and will be available in the
+launch configuration dialog which is opened by clicking <b>Run &gt External Tools &gt External Tools...</b>.
 </p>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
