Fix spelling mistake in name and usage of < instead of &lt;

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-LocalHistory.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-LocalHistory.htm
@@ -24,7 +24,7 @@
       <li>
       	Change the content of the method so that the for statements reads as:<br>
       	<p><code>
-      	for (int i= 0; i < 99; i++)
+      	for (int i= 0; i &lt; 99; i++)
       	</code></p>
 	    Save the file by pressing Ctrl+S.
       </li>
