Cleaned up Ant project description

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
@@ -12,8 +12,7 @@
 <H1 CLASS="Head">
 Ant support</H1>
 <P CLASS="Para">
-Ant is a build tool similar to the &quot;make&quot; feature, but written in Java.
-It is an Apache open source project.&nbsp;See <a href="http://ant.apache.org" target="_blank">http://ant.apache.org</a>
+Apache Ant is an open source, Java-based build tool. &nbsp;See <a href="http://ant.apache.org" target="_blank">http://ant.apache.org</a>
 for more details.  </P>
 <P CLASS="Para">
 The Ant support allows you to create and run Ant build files from the Workbench.&nbsp;
