*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-exttools.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-exttools.htm
@@ -17,7 +17,7 @@ External tools</h1>
 batch files, Ant build files, and others, using the Workbench. You can save
 these external tool configurations and run them at a later time.</p>
 
-<p>Output from external tools is displayed in the log console
+<p>Output from external tools is displayed in the console
 view.</p>
 
 <p>You can add external tools as part of the build process
@@ -103,10 +103,7 @@ resource.
 <p><b>${build_type}</b> - The kind of build when the external
 tool is run as part of a build. The value can be one of "full", "incremental",
 or "auto". If the external tool is run outside of a build, the value is
-then "none".
-
-<p><b>${ant_target:&lt;target name>}</b> - The name of a target
-in an Ant build file to perform.</blockquote>
+then "none".</blockquote>
 
 <p>Lets assume your Eclipse workspace directory is c:\eclipse\workspace
 and you have two projects, MyProject1 and MyProject2. The first project,
