--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 
 <meta http-equiv="Content-Type"
-	content="text/html; charset=windows-1252">
+	content="text/html; charset=ISO-8859-1">
 
 
 <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1"
